src/ui/components/backdrop/backdrop.module.scss
.root {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--color-black50);
  z-index: 100;
  backdrop-filter: blur(5px);
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  transition: opacity 0.3s ease-in-out;

  [data-backdrop='true'] & {
    opacity: 1;
    visibility: visible;
    pointer-events: all;
  }
}

